[gd_scene load_steps=20 format=2]

[ext_resource path="res://Assets/Graphics/Image/cross.png" type="Texture" id=1]
[ext_resource path="res://Assets/Graphics/Image/littlecross.png" type="Texture" id=2]
[ext_resource path="res://Ok_menu.gd" type="Script" id=4]
[ext_resource path="res://Assets/Fonts/Daydream.ttf" type="DynamicFontData" id=5]
[ext_resource path="res://Assets/Fonts/Minecraft.ttf" type="DynamicFontData" id=6]

[sub_resource type="Shader" id=111]
code = "shader_type canvas_item;

uniform vec4 topleft:hint_color;
uniform vec4 topright:hint_color;
uniform vec4 bottomleft:hint_color;
uniform vec4 bottomright:hint_color;

void fragment() {
	vec2 uv_corner = vec3(UV, 0.0).xy;
	vec4 top = mix(topleft, topright, uv_corner.x);
	vec4 bottom = mix(bottomleft, bottomright, uv_corner.x);
	COLOR =  mix(top, bottom, uv_corner.y);
}

"

[sub_resource type="ShaderMaterial" id=112]
shader = SubResource( 111 )
shader_param/topleft = Color( 0.968627, 0.94902, 0.678431, 1 )
shader_param/topright = Color( 0.470588, 0.729412, 0.407843, 1 )
shader_param/bottomleft = Color( 0.301961, 0.486275, 0.505882, 1 )
shader_param/bottomright = Color( 0.913725, 0.745098, 0.219608, 1 )

[sub_resource type="StyleBoxFlat" id=113]

[sub_resource type="DynamicFont" id=100]
size = 29
font_data = ExtResource( 6 )

[sub_resource type="Theme" id=104]
default_font = SubResource( 100 )

[sub_resource type="DynamicFont" id=102]
size = 23
font_data = ExtResource( 5 )

[sub_resource type="Theme" id=105]
default_font = SubResource( 102 )

[sub_resource type="ShaderMaterial" id=114]

[sub_resource type="DynamicFont" id=96]
size = 42
outline_color = Color( 0.729412, 0.321569, 0.321569, 1 )
extra_spacing_top = 2
extra_spacing_bottom = -5
extra_spacing_char = -4
font_data = ExtResource( 6 )

[sub_resource type="Theme" id=106]
default_font = SubResource( 96 )

[sub_resource type="StyleBoxFlat" id=107]
bg_color = Color( 0.756863, 0.321569, 0.321569, 1 )
border_width_left = 3
border_width_top = 3
border_width_right = 3
border_width_bottom = 3
border_color = Color( 0.752941, 0.0980392, 0.0980392, 1 )
border_blend = true
corner_radius_top_left = 3
corner_radius_top_right = 3
corner_radius_bottom_right = 3
corner_radius_bottom_left = 3

[sub_resource type="StyleBoxFlat" id=108]
bg_color = Color( 0.882353, 0.164706, 0.164706, 1 )

[sub_resource type="StyleBoxFlat" id=109]
bg_color = Color( 0.756863, 0.321569, 0.321569, 1 )
border_width_left = 3
border_width_top = 3
border_width_right = 3
border_width_bottom = 3
border_color = Color( 0.760742, 0.180528, 0.180528, 1 )
border_blend = true
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[sub_resource type="SpriteFrames" id=110]
animations = [ {
"frames": [ ExtResource( 1 ), ExtResource( 1 ), ExtResource( 2 ), ExtResource( 2 ) ],
"loop": true,
"name": "default",
"speed": 3.0
} ]

[node name="Ok_menu" type="Panel"]
material = SubResource( 112 )
margin_left = 106.0
margin_top = 19.0
margin_right = 768.0
margin_bottom = 495.0
custom_styles/panel = SubResource( 113 )
script = ExtResource( 4 )

[node name="Image_placeholder" type="TextureRect" parent="."]
margin_left = 70.0
margin_top = 128.0
margin_right = 1094.0
margin_bottom = 1152.0
rect_scale = Vector2( 0.258445, 0.249375 )

[node name="Ok_button" type="Button" parent="."]
margin_left = 484.0
margin_top = 202.0
margin_right = 592.0
margin_bottom = 283.0
theme = SubResource( 104 )
text = "OK"

[node name="Title" type="RichTextLabel" parent="."]
margin_left = 60.0
margin_top = 30.0
margin_right = 419.0
margin_bottom = 89.0
theme = SubResource( 105 )
custom_colors/default_color = Color( 0.345098, 0.294118, 0.290196, 1 )
bbcode_text = "Image choisie:"
text = "Image choisie:"

[node name="Closebutton" type="Button" parent="."]
material = SubResource( 114 )
margin_left = 596.0
margin_top = 15.0
margin_right = 644.0
margin_bottom = 61.0
rect_scale = Vector2( 1.10467, 1.01505 )
theme = SubResource( 106 )
custom_styles/hover = SubResource( 107 )
custom_styles/pressed = SubResource( 108 )
custom_styles/normal = SubResource( 109 )

[node name="Crossicon" type="AnimatedSprite" parent="Closebutton"]
position = Vector2( 24.8468, 22.0898 )
scale = Vector2( 0.0745588, 0.0729098 )
frames = SubResource( 110 )

[connection signal="pressed" from="Ok_button" to="." method="_on_Ok_button_pressed"]
[connection signal="pressed" from="Closebutton" to="." method="_on_Closebutton_pressed"]
